add state tests

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "aff",
-  "version": "1.0.0",
-  "description": "",
+  "name": "affjs",
+  "version": "0.0.1",
+  "description": "minimal, pure js frontend framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "reus",
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-preset-latest": "^6.16.0",
+    "jest": "^17.0.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
