--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
     "jest": "^17.0.3",
+    "jsdom": "^9.8.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
