--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "minimal, pure js frontend framework",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "dev": "jest --watch",
     "build": "gulp"
   },
