--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-preset-latest": "^6.16.0",
+    "coveralls": "^2.11.15",
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
     "jest": "^17.0.3",
